drone-home/ros2_ws/log/build_2024-11-16_16-56-30/drone_home/stderr.log
  File "/home/pi/drone-home/ros2_ws/install/drone_home/lib/python3.12/site-packages/drone_home/controller.py", line 62
    self.get_logger().info((f"Distance: {distance:.2f} meters")
                          ^
SyntaxError: '(' was never closed

